--- a/style.css
+++ b/style.css
@@ -1,13 +1,28 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+html{
+	width: 100vw;
+}
+
 body {
 	background: #EFEFBB;
 	background: linear-gradient(to right, rgb(197, 230, 236), rgb(239, 187, 230));
 	color: white;
 	margin: 0;
 	font-family: rubik;
+	width: 100%;
 }
+
+@media (min-width: 763px) {
+	
+
 
 .container {
 	padding: 40px;
+	width: 100%;
 	max-width: 1280px;
 	margin: 0 auto;
 }
@@ -19,18 +34,25 @@ h1 {
 
 .pokedex {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-	grid-gap: 20px;
-	padding-inline-start: 0;
+	grid-template-columns: 1fr 1fr 1fr;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-items: center;
+	gap: 1rem;
 }
 
 .card {
 	list-style: none;
+	max-width: 280px;
 	padding: 40px;
 	color: #222;
 	text-align: center;
 	border-radius: 20px;
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .card::after {
@@ -143,4 +165,153 @@ h1 {
 	z-index: 2;
 }
 
+}
 
+
+@media (max-width:762px) {
+
+	.container {
+		padding: 20px;
+		max-width: 100%;
+	}
+	
+	h1 {
+		text-align: center;
+		font-size: 34px;
+	}
+	
+	.pokedex {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+		gap: 1rem;
+	}
+	
+	.card {
+		list-style: none;
+		min-width: 300px;
+		max-width: 300px;
+		min-height: 300px;
+		max-height: 300px;
+		padding: 40px;
+		color: #222;
+		text-align: center;
+		border-radius: 20px;
+		position: relative;
+	}
+	
+	.card::after {
+	  content: "";
+	  display: block;
+	  width: 50%;
+	  height: 45%;
+	  border-radius: 100%;
+	  background-color: #fff;
+	  opacity: .7;
+	  position: absolute;
+	  top: 15%;
+	  left: 25%;
+	}
+	
+	.steel {
+		background-color: #f4f4f4;
+	}
+	
+	.fire {
+		background-color: #FDDFDF;
+	}
+	
+	.grass {
+		background-color: #DEFDE0;
+	}
+	
+	.electric {
+		background-color: #FCF7DE;
+	}
+	
+	.water, .ice {
+		background-color: #DEF3FD;
+	}
+	
+	.ground {
+		background-color: #f4e7da;
+	}
+	
+	.rock {
+		background-color: #d5d5d4;
+	}
+	
+	.fairy {
+		background-color: #fceaff;
+	}
+	
+	.poison {
+		background-color: #c34df1;
+	}
+	
+	.bug {
+		background-color: #f8d5a3;
+	}
+	
+	.dragon {
+		background-color: #97b3e6;
+	}
+	
+	.psychic {
+		background-color: #eaeda1;
+	}
+	
+	.flying {
+		background-color: #F5F5F5;
+	}
+	
+	.fighting {
+		background-color: #E6E0D4;
+	}
+	
+	.normal {
+		background-color: #F5F5F5;
+	}
+	
+	.dark {
+		background-color: #333;
+		color: white;
+	}
+	
+	.ghost {
+		background-color: #222;
+		color: white;
+	}
+	
+	.card:hover {
+		animation: bounce 0.5s linear;
+	}
+	
+	.card-title {
+		text-transform: capitalize;
+		margin-bottom: 0px;
+		font-size: 32px;
+		font-weight: normal;
+		position: relative;
+		z-index: 2;
+	}
+	
+	.card-subtitle {
+		margin-top: 5px;
+		color: #666;
+		font-weight: lighter;
+		position: relative;
+		z-index: 2;
+	}
+	
+	.card-image {
+		height: 180px;
+		position: relative;
+		z-index: 2;
+	}
+
+	
+
+
+}
