--- a/style.css
+++ b/style.css
@@ -1,56 +1,57 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html{
-	width: 100vw;
+
+html {
+  width: 100vw;
+  height: 100vh;
 }
 
 body {
-	background: #EFEFBB;
-	background: linear-gradient(to right, rgb(197, 230, 236), rgb(239, 187, 230));
-	color: white;
-	margin: 0;
-	font-family: rubik;
-	width: 100%;
+  background: #efefbb;
+  background: linear-gradient(to right, rgb(197, 230, 236), rgb(239, 187, 230));
+  color: white;
+  margin: 0;
+  font-family: rubik;
+  width: 100%;
 }
 
-@media (min-width: 1001px) {
-
 .container {
-	padding: 40px;
-	width: 100%;
-	max-width: 1280px;
-	margin: 0 auto;
+  padding: 20px;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  display: grid;
+  justify-content: center;
 }
 
 h1 {
-	text-align: center;
-	font-size: 54px;
+  text-align: center;
+  font-size: 54px;
 }
 
 .pokedex {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	justify-content: center;
-	flex-wrap: wrap;
-	align-items: center;
-	gap: 1rem;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 8px;
 }
 
 .card {
-	list-style: none;
-	max-width: 280px;
-	padding: 40px;
-	color: #222;
-	text-align: center;
-	border-radius: 20px;
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  list-style: none;
+  max-width: 280px;
+  padding: 40px;
+  text-transform: capitalize;
+  color: white;
+  text-align: center;
+  border-radius: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .card::after {
@@ -60,276 +61,138 @@ h1 {
   height: 45%;
   border-radius: 100%;
   background-color: #fff;
-  opacity: .7;
+  opacity: 0.7;
   position: absolute;
   top: 15%;
   left: 25%;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .steel {
-	background-color: #f4f4f4;
+  background-color: #f4f4f4;
 }
 
 .fire {
-	background-color: #FDDFDF;
+  background-color: #fddfdf;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_howlbg.jpg') center / cover no-repeat;
 }
 
 .grass {
-	background-color: #DEFDE0;
+	background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_monobg.jpg') center / cover no-repeat;
 }
 
 .electric {
-	background-color: #FCF7DE;
+  background-color: #fcf7de;
 }
 
-.water, .ice {
-	background-color: #DEF3FD;
+.water,
+.ice {
+  background-color: #def3fd;
 }
 
 .ground {
-	background-color: #f4e7da;
+  background-color: #f4e7da;
 }
 
 .rock {
-	background-color: #d5d5d4;
+  background-color: #d5d5d4;
 }
 
 .fairy {
-	background-color: #fceaff;
+  background-color: #fceaff;
 }
 
 .poison {
-	background-color: #c34df1;
+  background-color: #c34df1;
 }
 
 .bug {
-	background-color: #f8d5a3;
+  background-color: #f8d5a3;
 }
 
 .dragon {
-	background-color: #97b3e6;
+  background-color: #97b3e6;
 }
 
 .psychic {
-	background-color: #eaeda1;
+  background-color: #eaeda1;
 }
 
 .flying {
-	background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .fighting {
-	background-color: #E6E0D4;
+  background-color: #e6e0d4;
 }
 
 .normal {
-	background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .dark {
-	background-color: #333;
-	color: white;
+  background-color: #333;
+  color: white;
 }
 
 .ghost {
-	background-color: #222;
-	color: white;
+  background-color: #222;
+  color: white;
 }
 
-.card:hover {
-	animation: bounce 0.5s linear;
+.card-bg{
+	background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_monobg.jpg') center / cover no-repeat;
 }
+
 
 .card-title {
-	text-transform: capitalize;
-	margin-bottom: 0px;
-	font-size: 32px;
-	font-weight: normal;
-	position: relative;
-	z-index: 2;
+  text-transform: capitalize;
+  margin-bottom: 0px;
+  font-size: 24px;
+  font-weight: normal;
+  font-family: rubik;
+  position: absolute;
+  bottom: 2.2rem;
+  z-index: 2;
+  /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .card-subtitle {
-	margin-top: 5px;
-	color: #666;
-	font-weight: lighter;
-	position: relative;
-	z-index: 2;
+  margin-top: 5px;
+  color: #666;
+  font-weight: lighter;
+  position: absolute;
+  bottom: 1rem;
+  z-index: 2;
+  font-weight: 600;
+  
 }
 
 .card-image {
-	height: 180px;
-	position: relative;
-	z-index: 2;
+  position: relative;
+  margin-bottom: 1.5rem;
+  z-index: 2;
+  max-width: 100%;
 }
 
+@media screen and (min-width: 345px){
+    .pokedex {
+        grid-template-columns: 1fr;
+    }
 }
-
-
-@media (max-width: 1000px) {
-
-	.container {
-		padding: 20px;
-		height: 100vh;
-		max-width: 100%;
-	}
-	
-	h1 {
-		text-align: center;
-		font-size: 34px;
-	}
-	
-	.pokedex {
-		display: grid;
-		row-gap: 1rem;
-		grid-template-columns: 100%;
-	}
-	
-	.card {
-		list-style: none;
-		padding: 40px;
-		color: #222;
-		text-align: center;
-		border-radius: 20px;
-		position: relative;
-		border: 1px solid;
-		width: 80%;
-		margin: 0 auto;
-	}
-	
-	/* .card::after {
-	  content: "";
-	  display: block;
-	  width: 200px;
-	  height: 200px;
-	  border-radius: 100%;
-	  background-color: #fff;
-	  opacity: .7;
-	  position: absolute;
-	  top: 8%;
-	  left: 50%;
-	  transform: translate(-50%);
-	  z-index: 1;
-	} */
-	
-	.steel {
-		/* background-color: #f4f4f4; */
-		background-image: url(./assets/tipos/normal.jpg);
-	}
-	
-	.fire {
-		/* background-color: #FDDFDF; */
-		background-image: url(./assets/tipos/fogo.jpg);
-	}
-	
-	.grass {
-		/* background-color: #DEFDE0; */
-		background-image: url(./assets/tipos/grama.jpg);
-	}
-	
-	.electric {
-		/* background-color: #FCF7DE; */
-		background-image: url(./assets/tipos/eletrico.jpg);
-
-	}
-	
-	.water, .ice {
-		/* background-color: #DEF3FD; */
-		background-image: url(./assets/tipos/agua.jpg);
-	}
-	
-	.ground {
-		/* background-color: #f4e7da; */
-		background-image: url(./assets/tipos/rock.jpg);
-	}
-	
-	.rock {
-		/* background-color: #d5d5d4; */
-		background-image: url(./assets/tipos/rock.jpg);
-	}
-	
-	.fairy {
-		/* background-color: #fceaff; */
-		background-image: url(./assets/tipos/fada.jpg);
-
-	}
-	
-	.poison {
-		/* background-color: #c34df1; */
-		background-image: url(./assets/tipos/psiquico.jpg);
-	}
-	
-	.bug {
-		/* background-color: #f8d5a3; */
-		background-image: url(./assets/tipos/bug.jpg);
-	}
-	
-	.dragon {
-		/* background-color: #97b3e6; */
-		background-image: url(./assets/tipos/voador.png);
-
-	}
-	
-	.psychic {
-		/* background-color: #eaeda1; */
-		background-image: url(./assets/tipos/psiquico.jpg);
-	}
-	
-	.flying {
-		/* background-color: #F5F5F5; */
-		background-image: url(./assets/tipos/voador.png);
-	}
-	
-	.fighting {
-		/* background-color: #E6E0D4; */
-		background-image: url(./assets/tipos/lutador.jpg);
-	}
-	
-	.normal {
-		/* background-color: #F5F5F5; */
-		background-image: url(./assets/tipos/normal.jpg);
-	}
-	
-	.dark {
-		/* background-color: #333; */
-		color: white;
-		background-image: url(./assets/tipos/noturno.jpg);
-	}
-	
-	.ghost {
-		/* background-color: #222; */
-		background-image: url(./assets/tipos/ghost.jpg);
-		color: white;
-	}
-	
-	.card:hover {
-		animation: bounce 0.5s linear;
-	}
-	
-	.card-title {
-		text-transform: capitalize;
-		margin-bottom: 0px;
-		font-size: 35px;
-		font-weight: bold;
-		position: relative;
-		z-index: 3;
-	}
-	
-	.card-subtitle {
-		margin-top: 5px;
-		color: #666;
-		font-weight: bold;
-		position: relative;
-		z-index: 3;
-	}
-	
-	.card-image {
-		height: 200px;
-		position: relative;
-		z-index: 2;
-	}
-
-	
-
-
+@media screen and (min-width: 576px){
+    .pokedex {
+        grid-template-columns: 1fr 1fr ;
+    }
+}
+@media screen and (min-width: 785px){
+    .pokedex {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (min-width: 992px){
+    .pokedex {
+        grid-template-columns: 1fr 1fr 1fr ;
+    }
 }
