--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1 {
   max-width: 280px;
   padding: 40px;
   text-transform: capitalize;
-  color: white;
+  color: #333;
   text-align: center;
   border-radius: 20px;
   position: relative;
@@ -74,11 +74,10 @@ h1 {
 
 .fire {
   background-color: #fddfdf;
-  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_howlbg.jpg') center / cover no-repeat;
 }
 
 .grass {
-	background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_monobg.jpg') center / cover no-repeat;
+	background-color: #95eb9d;
 }
 
 .electric {
@@ -155,7 +154,7 @@ h1 {
   bottom: 2.2rem;
   z-index: 2;
   /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
 }
 
 .card-subtitle {
@@ -188,8 +187,37 @@ h1 {
 }
 @media screen and (min-width: 785px){
     .pokedex {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
     }
+
+	.card{
+		max-width: 100%;
+		height: 45vh;
+		display: grid;
+		grid-template-columns: 1fr;
+		justify-content: center;
+	}
+	.card-image{
+		height: 80%;
+		justify-self: center;
+		align-self: center;
+	}
+
+	.card-title {
+		font-size: 60px;
+		justify-self: center;
+		bottom: 3rem;
+	  }
+	  
+	  .card-subtitle {
+		font-size: 40px;
+		justify-self: center;
+	  }
+
+	  .card::after{
+		width: 50%;
+		height: 50%;
+	  }
 }
 @media screen and (min-width: 992px){
     .pokedex {
