--- a/style.css
+++ b/style.css
@@ -176,14 +176,72 @@ h1 {
 }
 
 @media screen and (min-width: 345px){
-    .pokedex {
+	.pokedex {
         grid-template-columns: 1fr;
     }
+
+	.card{
+		max-width: 100%;
+		height: 45vh;
+		display: grid;
+		grid-template-columns: 1fr;
+		justify-content: center;
+	}
+	.card-image{
+		height: 80%;
+		justify-self: center;
+		align-self: center;
+	}
+
+	.card-title {
+		font-size: 60px;
+		justify-self: center;
+		bottom: 3rem;
+	  }
+	  
+	  .card-subtitle {
+		font-size: 40px;
+		justify-self: center;
+	  }
+
+	  .card::after{
+		width: 50%;
+		height: 50%;
+	  }
 }
 @media screen and (min-width: 576px){
-    .pokedex {
-        grid-template-columns: 1fr 1fr ;
+	.pokedex {
+        grid-template-columns: 1fr;
     }
+
+	.card{
+		max-width: 100%;
+		height: 45vh;
+		display: grid;
+		grid-template-columns: 1fr;
+		justify-content: center;
+	}
+	.card-image{
+		height: 80%;
+		justify-self: center;
+		align-self: center;
+	}
+
+	.card-title {
+		font-size: 60px;
+		justify-self: center;
+		bottom: 3rem;
+	  }
+	  
+	  .card-subtitle {
+		font-size: 40px;
+		justify-self: center;
+	  }
+
+	  .card::after{
+		width: 50%;
+		height: 50%;
+	  }
 }
 @media screen and (min-width: 785px){
     .pokedex {
