--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ h1 {
 }
 
 .pokedex {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 8px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
 }
 
 .card {
@@ -57,15 +57,14 @@ h1 {
 .card::after {
   content: "";
   display: block;
-  width: 50%;
-  height: 45%;
-  border-radius: 100%;
-  background-color: #fff;
-  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+  background: url(./assets/tipos/pngaaa.com-96212.png) no-repeat center;
+  background-size: 200px;
   position: absolute;
-  top: 15%;
-  left: 25%;
-  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .steel {
@@ -77,7 +76,8 @@ h1 {
 }
 
 .grass {
-	background-color: #95eb9d;
+  background-color: #95eb9d;
+  
 }
 
 .electric {
@@ -139,10 +139,10 @@ h1 {
   color: white;
 }
 
-.card-bg{
-	background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_monobg.jpg') center / cover no-repeat;
+.card-bg {
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_monobg.jpg")
+    center / cover no-repeat;
 }
-
 
 .card-title {
   text-transform: capitalize;
@@ -165,7 +165,6 @@ h1 {
   bottom: 1rem;
   z-index: 2;
   font-weight: 600;
-  
 }
 
 .card-image {
@@ -175,110 +174,120 @@ h1 {
   max-width: 100%;
 }
 
-@media screen and (min-width: 345px){
-	.pokedex {
-        grid-template-columns: 1fr;
-    }
+@media screen and (min-width: 345px) {
+  .pokedex {
+    grid-template-columns: 1fr;
+  }
 
-	.card{
-		max-width: 100%;
-		height: 45vh;
-		display: grid;
-		grid-template-columns: 1fr;
-		justify-content: center;
-	}
-	.card-image{
-		height: 80%;
-		justify-self: center;
-		align-self: center;
-	}
+  .card {
+    max-width: 100%;
+    height: 45vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+  .card-image {
+    height: 70%;
+    justify-self: center;
+    align-self: center;
+  }
 
-	.card-title {
-		font-size: 60px;
-		justify-self: center;
-		bottom: 3rem;
-	  }
-	  
-	  .card-subtitle {
-		font-size: 40px;
-		justify-self: center;
-	  }
+  .card:nth-child(74) .card-image,
+  .card:nth-child(81) .card-image {
+    height: fit-content;
+    width: 50%;
+  }
 
-	  .card::after{
-		width: 50%;
-		height: 50%;
-	  }
+  .card-title {
+    font-size: 60px;
+    justify-self: center;
+    bottom: 3rem;
+  }
+
+  .card-subtitle {
+    font-size: 40px;
+    justify-self: center;
+  }
+
+  .card::after {
+    background-size: 200px;
+  }
 }
-@media screen and (min-width: 576px){
-	.pokedex {
-        grid-template-columns: 1fr;
-    }
+@media screen and (min-width: 785px) {
+  .pokedex {
+    grid-template-columns: 1fr;
+  }
 
-	.card{
-		max-width: 100%;
-		height: 45vh;
-		display: grid;
-		grid-template-columns: 1fr;
-		justify-content: center;
-	}
-	.card-image{
-		height: 80%;
-		justify-self: center;
-		align-self: center;
-	}
+  .card {
+    max-width: 100%;
+    height: 45vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+  .card-image {
+    height: 70%;
+    justify-self: center;
+    align-self: center;
+  }
 
-	.card-title {
-		font-size: 60px;
-		justify-self: center;
-		bottom: 3rem;
-	  }
-	  
-	  .card-subtitle {
-		font-size: 40px;
-		justify-self: center;
-	  }
+  .card:nth-child(74) .card-image,
+  .card:nth-child(81) .card-image {
+    height: fit-content;
+    width: 50%;
+  }
 
-	  .card::after{
-		width: 50%;
-		height: 50%;
-	  }
+  .card-title {
+    font-size: 60px;
+    justify-self: center;
+    bottom: 3rem;
+  }
+
+  .card-subtitle {
+    font-size: 40px;
+    justify-self: center;
+  }
+
+  .card::after {
+    background-size: 400px;
+  }
 }
-@media screen and (min-width: 785px){
-    .pokedex {
-        grid-template-columns: 1fr;
-    }
+@media screen and (min-width: 992px) {
+  .pokedex {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
-	.card{
-		max-width: 100%;
-		height: 45vh;
-		display: grid;
-		grid-template-columns: 1fr;
-		justify-content: center;
-	}
-	.card-image{
-		height: 80%;
-		justify-self: center;
-		align-self: center;
-	}
+  .card {
+    max-width: 100%;
+    height: 400px;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+  .card-image {
+    height: 70%;
+    justify-self: center;
+    align-self: center;
+  }
 
-	.card-title {
-		font-size: 60px;
-		justify-self: center;
-		bottom: 3rem;
-	  }
-	  
-	  .card-subtitle {
-		font-size: 40px;
-		justify-self: center;
-	  }
+  .card:nth-child(74) .card-image,
+  .card:nth-child(81) .card-image {
+    height: fit-content;
+    width: 50%;
+  }
 
-	  .card::after{
-		width: 50%;
-		height: 50%;
-	  }
-}
-@media screen and (min-width: 992px){
-    .pokedex {
-        grid-template-columns: 1fr 1fr 1fr ;
-    }
+  .card-title {
+    font-size: 24px;
+    justify-self: center;
+    bottom: 3rem;
+  }
+
+  .card-subtitle {
+    font-size: 18px;
+    justify-self: center;
+  }
+
+  .card::after {
+    background-size: 200px;
+  }
 }
